# chess

./: .gitmodules
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  chess.ts  socket.ts
app/src/modules/: Game.tsx  Home.tsx
app/src/stores/: dragAndDrop.ts  gameState.ts
app/src/ui/: Board.tsx  Button.tsx  Piece.tsx  PlayerInfo.tsx  PromotionPiece.tsx  PromotionWindow.tsx
app/src/ui/board/: index.tsx
backend/: .gitignore  CMakeLists.txt  index2.html  notes.md  todo
backend/prod/: .gitignore  requirements.txt  run.py
backend/prod/instance/: config.dev.toml
backend/prod/src/: __init__.py  core.py  game.py  http.py  limit.py  utils.py
backend/prod/src/tests/: test_core.py  test_game.py
backend/src/: CMakeLists.txt  http.cpp  http.h  main.cpp  out  server.cpp  server.h  utils.cpp  utils.h  websocket.h
backend/src/trie/: trie.cpp  trie.h
backend/v0/: README.md
friendly-chess-workspace/friendly-chess-wasm/src/: lib.rs
friendly-chess-workspace/friendly-chess/src/chess/: mod.rs
hieu-chess/: Cargo.toml
hieu-chess/hieu-chess-lib/: Cargo.toml
hieu-chess/hieu-chess-lib/src/: chess.rs  lib.rs  move_gen.rs  piece.rs  square.rs
hieu-chess/hieu-chess-wasm/src/: lib.rs
old_app/: vite.config.ts.timestamp-1723354078216-af8a4e88ff4bf.mjs
